--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "legendei-downloader",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A legendei.to subtitle downloader",
   "main": "index.js",
   "homepage": "https://github.com/JonRoosevelt/legendei-downloader",
   "bugs": {
     "url": "https://github.com/JonRoosevelt/legendei-downloader/issues",
     "email": "jonathanroosevelt@gmail.com"
+  },
+  "scripts": {
+    "download": "node index.js -e"
   },
   "repository": {
     "type": "git",
